# rust-blockchain

./: .gitignore  Cargo.toml
src/: block.rs  blockchain.rs  cli.rs  lib.rs  main.rs  network.rs  transaction.rs  wallet.rs  zk_proofs.rs
tests/: tests.rs
