[package]
name = "privacy_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.28.2", features = ["full"] }
ed25519-zebra = "2.2.0"
rand = { version = "0.8.5", features = ["std"] }
clap = { version = "3.2.25", features = ["derive"] }
bellman = "0.14.0"
blstrs = "0.7.1"
ff = "0.13"
group = "0.13"
chrono = "0.4"
bincode = "1.3"